fix(menu): fix flickering when changing the language

--- a/src/scripts/components/menu/menu.styl
+++ b/src/scripts/components/menu/menu.styl
@@ -5,7 +5,8 @@
   flex-direction: row
   flex-wrap: wrap
   align-items: flex-start
-  overflow-y: scroll
+  overflow-y: auto
+  width: 50%
   height: 90%
   font-family: Arial, Helvetica, sans-serif
 
@@ -14,7 +15,8 @@
   flex-direction: column
   flex-wrap: wrap
   overflow-y: auto
-  padding: emCalc(10px) emCalc(40px)
+  padding: emCalc(10px) emCalc(32px)
+  min-width: 25%
   color: $textWhite
   list-style: none
 
